# Curby

./: .gitignore  DEPLOY.bat  LAUNCH.bat  pyproject.toml
curby/: app.py
curby/api/: __init__.py
curby/core/: __init__.py  common.py  models.py  requester.py  stack.py  utils.py
curby/error/: __init__.py
curby/gather/binder/: __init__.py  artistbinder.py  songbinder.py
curby/gather/controller/: billboardcontroller.py  freemidicontroller.py  musicbrainzcontroller.py
curby/gather/service/: billboardservice.py  freemidiservice.py  musicbrainzservice.py
curby/generate/: __init__.py  compilationsonggenerator.py
curby/uploader/: __init__.py  youtubeuploader.py
tests/: test.py  test2.py  test3.py  test4.py  test5.py  test6.py  test_controller.py  test_core.py
