[tool.poetry]
name = "cubry"
version = "0.1.0"
description = ""
authors = ["Benjamin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
annotated-types = "0.7.0"
anyio = "4.4.0"
beautifulsoup4 = "4.12.3"
bs4 = "0.0.2"
cachetools = "5.3.3"
certifi = "2024.6.2"
charset-normalizer = "3.3.2"
click = "8.1.7"
colorama = "0.4.6"
decorator = "4.4.2"
dnspython = "2.6.1"
email-validator = "2.2.0"
fastapi = "0.111.0"
fastapi-cli = "0.0.4"
frozendict = "2.4.4"
google-api-core = "2.19.1"
google-api-python-client = "2.134.0"
google-auth = "2.30.0"
google-auth-httplib2 = "0.2.0"
google-auth-oauthlib = "1.2.0"
googleapis-common-protos = "1.63.2"
h11 = "0.14.0"
httpcore = "1.0.5"
httplib2 = "0.22.0"
httptools = "0.6.1"
httpx = "0.27.0"
idna = "3.7"
imageio = "2.34.2"
imageio-ffmpeg = "0.5.1"
iniconfig = "2.0.0"
jinja2 = "3.1.4"
markdown-it-py = "3.0.0"
markupsafe = "2.1.5"
mdurl = "0.1.2"
moviepy = "1.0.3"
numpy = "2.0.0"
oauthlib = "3.2.2"
orjson = "3.10.5"
packaging = "24.1"
pillow = "10.3.0"
pluggy = "1.5.0"
proglog = "0.1.10"
proto-plus = "1.24.0"
protobuf = "5.27.1"
pyasn1 = "0.6.0"
pyasn1-modules = "0.4.0"
pydantic = "2.7.4"
pydantic-core = "2.18.4"
pygments = "2.18.0"
pyparsing = "3.1.2"
pytest = "8.2.2"
python-dotenv = "1.0.1"
python-multipart = "0.0.9"
pytube = "15.0.0"
pyyaml = "6.0.1"
requests = "2.32.3"
requests-oauthlib = "2.0.0"
rich = "13.7.1"
rsa = "4.9"
setuptools = "70.1.0"
shellingham = "1.5.4"
sniffio = "1.3.1"
soupsieve = "2.5"
sponsorblock = "0.1.3"
sponsorblock-py = "0.2.3"
starlette = "0.37.2"
tqdm = "4.66.4"
typer = "0.12.3"
typing-extensions = "4.12.2"
ujson = "5.10.0"
uritemplate = "4.1.1"
urllib3 = "2.2.2"
uvicorn = "0.30.1"
watchfiles = "0.22.0"
websockets = "12.0"
youtube-search-python = "1.6.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
